@@ -1,5 +1,12 @@
 2008-10-11  Richard Hult  <richard@imendio.com>
 
+	* src/ige-conf-gconf.c: (ige_conf_init), (ige_conf_add_defaults):
+	* src/ige-conf-private.h:
+	* src/ige-conf.c: (_ige_conf_defaults_free_list): Fix build with
+	gconf implementation.
+
+2008-10-11  Richard Hult  <richard@imendio.com>
+
 	* src/ige-conf-mac.c: Rename from .m to work around a bug(?) in
 	auto*, can't get this to work on linux.
 
